# scallop-old

./: .gitignore  Cargo.toml  readme.md
compiler/: .gitignore  Cargo.toml
compiler/examples/: path-ast2ram.rs  sum2-ast2ram.rs  sum2-ram2rs.rs
compiler/src/: ast.rs  ast2ram.rs  ast_analysis.rs  ast_transform.rs  common.rs  error.rs  lib.rs  location.rs  options.rs  parser.rs  ram.rs  ram2rs.rs  syntax.lalrpop  visitor.rs
compiler/tests/: test_demand_analysis.rs  test_parser.rs
laboratory/mnist-exp/: .gitignore  Cargo.toml
laboratory/mnist-exp/docs/: boolean_formula.html  figure-1.html  figure-2.html
laboratory/mnist-exp/scripts/: log_collection.py
laboratory/mnist-exp/src/: lib.rs
runtime/: Cargo.toml
runtime/examples/: dynamic-test.rs  intersect-test.rs  join-test.rs  path-edge-test.rs  path-generated.rs  projection-test.rs  sudoku4x4.rs  sum2-proofs.rs  sum2-top-k-proofs.rs  sum2.rs  sum3-top-k-proofs-full.rs  sum4-top-k-proofs-full.rs  union-test.rs  vqar.rs
runtime/src/: dataflow.rs  element.rs  error.rs  iteration.rs  lib.rs  program.rs  relation.rs  semiring.rs  tuple.rs  variable.rs  variable_handle.rs
runtime/src/dataflows/: antijoin.rs  contains.rs  difference.rs  filter.rs  find.rs  intersection.rs  join.rs  mod.rs  product.rs  projection.rs  union.rs  variable.rs
runtime/src/interpreter/: compiler.rs  dataflow.rs  element.rs  expression.rs  id.rs  interop.rs  mod.rs  relation.rs  rule.rs  tuple.rs  update.rs  utils.rs  variable.rs  (+1 more)
runtime/tests/: dyn_dataflow.rs  dyn_interop.rs  dyn_relation.rs  dyn_variable.rs  tuple_type.rs
(+98 files in other folders)
