[package]
name = "scallop-compiler"
version = "0.1.0"
authors = ["Ziyang Li <liby99@icloud.com>"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.0"
termion = "1.5"
structopt = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
paste = "1.0"
